Revise farewell message and add gratitude
Updated text to express gratitude and add a farewell message.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     Uunahan ko na agad ng isang pang malakasang paghinge ng pasensya kasi sabi ko di na ako magre-reach
                     out ever again but here I am, still reaching out for the nth time!</p>
 
-                <p>I’ve been thinking a lot lately, and I really needed to say this, not to pull you back in, but to
+                <p>I’ve been thinking a lot lately, and I really needed to say this, not to pull you back in or awayin ka, but to
                     finally let go of the ghosts that have been haunting me.<br>
                     First, thank you for being part of my 2025. Even with everything that happened, you were one of the
                     brightest parts of this year for me, and I’ll always be grateful for that.</p>
@@ -94,7 +94,7 @@
                 <p>I just needed to say this out loud, to you, so I can finally release these ghosts and move forward. I
                     wish you nothing but peace, happiness, and all the good things you deserve.</p>
 
-                <p>Take care, Mj!</p>
+                <p>Take care, Mj! Maraming maraming salamat 😭🥹</p>
 
                 <p class="poem">"Yet if you should forget me for a while<br>
                     And afterwards remember, do not grieve:<br>
