--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
                 <p>Hellllloooo!</p>
 
-                <p>First of all, I want to greet you a HAPPY NEW YEAR.<br>
+                <p>First of all, I want to greet you a HAPPY NEW YEAR. Siguro ma rereceive mo ito exactly at 12 am.<br>
+                    Matagal an actually itong sulat na 'to, siguro 2 weeks old na rin.
                     Uunahan ko na agad ng isang pang malakasang paghinge ng pasensya kasi sabi ko di na ako magre-reach
                     out ever again but here I am, still reaching out for the nth time!</p>
 
