--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
 
                 <p>I just needed to say this out loud, to you, so I can finally release these ghosts and move forward. I
                     wish you nothing but peace, happiness, and all the good things you deserve.</p>
+                <p>As the year turns, I hope you carry forward the moments that made you stronger <br>
+                    and gently release the ones that weighed you down. <br>
+                    May this New Year meet you with softer mornings, kinder days, and the quiet <br>
+                    confidence that you are becoming someone you once needed. <br>
+                    Whatever you’re hoping for—peace, healing, love, or courage. I hope it finds <br>
+                    its way to you in its own time. Here’s to new beginnings, small joys, and a year <br>
+                    that treats your heart with care. Happy New Year.
 
                 <p>Take care, Mj! Maraming maraming salamat 😭🥹</p>
 
@@ -103,7 +110,7 @@
                     A vestige of the thoughts that once I had,<br>
                     Better by far you should forget and smile<br>
                     Than that you should remember and be sad"<br>
-                    - Christina Rossetti 'Remember'"</p>
+                    - Christina Rossetti 'Remember'</p>
             </div>
         </div>
 
