--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                     and gently release the ones that weighed you down. <br>
                     May this New Year meet you with softer mornings, kinder days, and the quiet <br>
                     confidence that you are becoming someone you once needed. <br>
-                    Whatever you’re hoping for—peace, healing, love, or courage. I hope it finds <br>
+                    Whatever you’re hoping for peace, healing, love, or courage. I hope it finds <br>
                     its way to you in its own time. Here’s to new beginnings, small joys, and a year <br>
-                    that treats your heart with care. Happy New Year.
+                    that treats your heart with care. Happy New Year!.
 
-                <p>Take care, Mj! Maraming maraming salamat 😭🥹</p>
+                <p>Take care, Mj! Maraming maraming salamattttt.</p>
 
                 <p class="poem">"Yet if you should forget me for a while<br>
                     And afterwards remember, do not grieve:<br>
