Revise paragraph on forgetting and letting go
Updated text to reflect personal feelings and clarity.

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
                     genuinely hope you are okay, and that feeling never really left.</p>
 
                 <p>I never really understood how people can just cut someone out of their life completely. The thought
-                    of forgetting someone who meant so much honestly scares me. It feels impossible and terrifying. But
-                    I know that's what you needed, and I respect that now.</p>
+                    of forgetting someone who meant so much honestly scares me. It feels <br>
+                    impossible and terrifying (Pero, sa akin lang naman 'yannn). But
+                    I know that's what you needed, that's what I needed, and I respect that. </p>
 
                 <p>Since you left, I've held on for so long, clinging to the pain and the memories. But maybe finally
                     letting go is what will make everything clear, for both of us.</p>
